--- a/webApp/PanicButton/nbproject/private/private.properties
+++ b/webApp/PanicButton/nbproject/private/private.properties
@@ -1,5 +1,9 @@
 deploy.ant.properties.file=C:\\Users\\Oswaldo\\AppData\\Roaming\\NetBeans\\7.2\\tomcat70.properties
-j2ee.server.domain=C:/Users/Oswaldo/AppData/Roaming/NetBeans/7.2/apache-tomcat-7.0.14.0_base
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Program Files/glassfish-3.1.2.2/glassfish/domains/domain1
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 7.0.14
-j2ee.server.instance=tomcat70:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 7.0.14:base=apache-tomcat-7.0.14.0_base
+j2ee.server.instance=tomcat70:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 7.0.14
+j2ee.server.middleware=C:/Program Files/glassfish-3.1.2.2
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Oswaldo\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
