me voy a jatear
me voy a jatear

--- a/webApp/PanicButton/web/WEB-INF/web.xml
+++ b/webApp/PanicButton/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>SUsuario</servlet-name>
         <servlet-class>com.servlet.SUsuario</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SLogin</servlet-name>
+        <servlet-class>com.servlet.SLogin</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>SAdmin</servlet-name>
         <url-pattern>/SAdmin</url-pattern>
@@ -17,13 +21,17 @@
         <url-pattern>/SUsuario</url-pattern>
     </servlet-mapping>
     <filter>
-	<filter-name>CORS</filter-name>
-	<filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+        <filter-name>CORS</filter-name>
+        <filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>CORS</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <servlet-mapping>
+        <servlet-name>SLogin</servlet-name>
+        <url-pattern>/SLogin</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
